# nomos-pocs

./: .gitignore  .gitmodules  CONTRIBUTING.md
emmarin/apps/swapvm/stf/host/: Cargo.toml
emmarin/atomic_asset_transfer/executor/: Cargo.toml  profile.pb
emmarin/atomic_asset_transfer/executor/src/: lib.rs  main.rs
emmarin/atomic_asset_transfer/executor/tests/: atomic_transfer.rs  auction.rs  deposit_ptx.rs  transfer_ptx.rs  withdraw_ptx.rs
emmarin/cl/: Cargo.toml  gen_risc0_images.sh
emmarin/cl/bundle_risc0_proof/: Cargo.toml
emmarin/cl/bundle_risc0_proof/bundle/: Cargo.toml
emmarin/cl/bundle_risc0_proof/bundle/src/: main.rs
emmarin/cl/cl/: Cargo.toml
emmarin/cl/cl/src/: bundle.rs  input.rs  lib.rs  merkle.rs  note.rs  nullifier.rs  output.rs  partial_tx.rs  zones.rs
emmarin/cl/cl/src/cl/: balance.rs  bundle.rs  crypto.rs  indexed.rs  input.rs  merkle.rs  mmr.rs  mod.rs  note.rs  nullifier.rs  output.rs  pact.rs  partial_tx.rs  sparse_merkle.rs
emmarin/cl/cl/src/crust/: balance.rs  iow.rs  mod.rs  note.rs  nullifier.rs  tx.rs
emmarin/cl/cl/src/ds/: indexed.rs  merkle.rs  mmr.rs  mod.rs
emmarin/cl/cl/src/mantle/: indexed.rs  ledger.rs  mod.rs  update.rs  zone.rs
emmarin/cl/cl/src/zone_layer/: mod.rs  (+4 more)
emmarin/cl/cl/tests/: simple_transfer.rs
emmarin/cl/ledger/: Cargo.toml
emmarin/cl/ledger/src/: balance.rs  bundle.rs  constraint.rs  covenant.rs  ledger.rs  lib.rs  pact.rs  partial_tx.rs  stf.rs  tx.rs  update.rs  zone_update.rs
emmarin/cl/ledger/tests/: simple_transfer.rs
emmarin/cl/ledger_proof_statements/: Cargo.toml
emmarin/cl/ledger_proof_statements/src/: balance.rs  bundle.rs  constraint.rs  covenant.rs  io.rs  ledger.rs  lib.rs  pact.rs  ptx.rs  stf.rs  tx.rs
emmarin/cl/ledger_risc0_proof/: Cargo.toml
emmarin/cl/ledger_validity_proof/: Cargo.toml
emmarin/cl/ledger_validity_proof/ledger/: Cargo.toml
emmarin/cl/ptx_risc0_proof/: Cargo.toml
emmarin/cl/risc0-zkvm-io/: Cargo.toml
emmarin/cl/risc0-zkvm-io-derive/: Cargo.toml
emmarin/cl/risc0-zkvm-io-derive/src/: lib.rs
emmarin/cl/risc0-zkvm-io/src/: lib.rs
emmarin/cl/risc0_images/: Cargo.toml
emmarin/cl/risc0_images/src/: BUNDLE_ELF  BUNDLE_ID  LEDGER_ELF  LEDGER_ID  STF_NOP_ELF  STF_NOP_ID  TX_ELF  TX_ID  lib.rs
emmarin/cl/risc0_images_police/: Cargo.toml
emmarin/cl/risc0_images_police/src/: lib.rs
emmarin/cl/risc0_proofs/: Cargo.toml
emmarin/cl/risc0_proofs/balance/: Cargo.toml
emmarin/cl/risc0_proofs/constraint_nop/: Cargo.toml
emmarin/cl/risc0_proofs/pact/: Cargo.toml
emmarin/cl/risc0_proofs/ptx/: Cargo.toml
emmarin/cl/risc0_proofs/spending_nop/: Cargo.toml
emmarin/cl/risc0_proofs/stf_nop/: Cargo.toml
emmarin/cl/tx_risc0_proof/: Cargo.toml
emmarin/cl/tx_risc0_proof/tx/: Cargo.toml
goas/atomic_asset_transfer/common/: Cargo.toml
goas/atomic_asset_transfer/common/src/: events.rs  lib.rs  mmr.rs
goas/cl/cl/: Cargo.toml
goas/cl/cl/src/: balance.rs  bundle.rs  input.rs  lib.rs  note.rs  nullifier.rs  output.rs  partial_tx.rs
goas/cl/cl/tests/: simple_transfer.rs
mistral/lightnode/: Cargo.toml
mistral/lightnode/src/: da.rs  lib.rs  main.rs  nomos.rs  proofcheck.rs
mistral/sequencer-node/: Cargo.toml
mistral/sequencer-node/src/: main.rs
proof_of_leadership/risc0/prover/: Cargo.toml
proof_of_leadership/risc0/prover/src/: leader.rs  lib.rs
storage-benchmarks/: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
storage-benchmarks/dataset_configs/: annual_mainnet.toml  quick_test.toml  testnet_sim.toml  validator_profiles.toml
storage-benchmarks/examples/: storage_capacity_calculator.rs
storage-benchmarks/src/: lib.rs
storage-benchmarks/src/benchmark/: analysis.rs  mod.rs  runner.rs  types.rs  utilities.rs
storage-benchmarks/src/benchmark/workloads/: mod.rs  orchestrator.rs  reads.rs  runners.rs  writes.rs
storage-benchmarks/src/config/: cli.rs  dataset_generation.rs  mod.rs  types.rs  validator_profiles.rs
storage-benchmarks/src/data/: deterministic.rs  generator.rs  hot_path_types.rs  mod.rs  realistic_generation.rs  spec_access_patterns.rs  streaming_writer.rs
storage-benchmarks/src/metrics/: latency_stats.rs  mod.rs  rocksdb_collector.rs  rocksdb_stats.rs  runtime_memory_allocator.rs
storage-benchmarks/src/storage/: mod.rs  rocksdb_options_tuning.rs
surrealdb_bench/: Cargo.toml  README.md  run_benchmarks.sh
surrealdb_bench/src/: common.rs  lib.rs  rocksdb.rs  surrealdb.rs
sz-poc-offsite-2025/: Cargo.toml
sz-poc-offsite-2025/blockscout/: README.md
sz-poc-offsite-2025/blockscout/config/runtime/: dev.exs
sz-poc-offsite-2025/evm/aggregator/: Cargo.toml
sz-poc-offsite-2025/evm/aggregator/src/: lib.rs
sz-poc-offsite-2025/evm/evm-node/: Cargo.toml
sz-poc-offsite-2025/evm/evm-node/src/: main.rs
sz-poc-offsite-2025/evm/lightnode/: Cargo.toml
sz-poc-offsite-2025/evm/lightnode/src/: lib.rs  main.rs  nomos.rs  proofcheck.rs
sz-poc-offsite-2025/evm/node/: Cargo.toml
sz-poc-offsite-2025/evm/processor/: Cargo.toml
sz-poc-offsite-2025/evm/processor/src/: lib.rs
sz-poc-offsite-2025/evm/prover/: Cargo.toml  justfile
sz-poc-offsite-2025/evm/prover/src/: http.rs  main.rs
sz-poc-offsite-2025/evm/sequencer-batcher/: Cargo.toml
sz-poc-offsite-2025/evm/sequencer-mempool/: Cargo.toml
sz-poc-offsite-2025/evm/sequencer-mempool/src/: lib.rs
sz-poc-offsite-2025/evm/sequencer-node/: Cargo.toml
sz-poc-offsite-2025/evm/sequencer-node/src/: main.rs
sz-poc-offsite-2025/node/: Cargo.toml
sz-poc-offsite-2025/uniswap/contracts/: README.md  deploy-contracts.js  deploy-contracts.sh
sz-poc-offsite-2025/uniswap/nomiswap/: .env  package.json
sz-poc-offsite-2025/uniswap/nomiswap/public/: index.html  manifest.json
sz-poc-offsite-2025/uniswap/nomiswap/src/: App.css
sz-poc-offsite-2025/zksync/: README.md
wire_encodings/: Cargo.toml  README.md
wire_encodings/benches/: benchmark.rs
wire_encodings/benches/common/: mod.rs
wire_encodings/benches/formats/: bincode_format.rs  borsh_format.rs  cbor_format.rs  json_format.rs  messagepack_format.rs  mod.rs  protobuf_format.rs  scale_format.rs  ssz_format.rs
(+300 files in other folders)
