[package]
name = "surrealdb_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "help", "color"] }
rocksdb = "0.23.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = { version = "2.2.2", features = ["kv-rocksdb", "kv-mem", "allocator"] }
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync"] }
regex = "1.11.1"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[[bin]]
name = "surrealdb_select_all"
path = "src/bin/surrealdb_select_all.rs"

[[bin]]
name = "surrealdb_parent_to_child_graph"
path = "src/bin/surrealdb_parent_to_child_graph.rs"

[[bin]]
name = "surrealdb_parent_to_child_pointers"
path = "src/bin/surrealdb_parent_to_child_pointers.rs"

[[bin]]
name = "rocksdb_select_all"
path = "src/bin/rocksdb_select_all.rs"

[[bin]]
name = "rocksdb_parent_to_child"
path = "src/bin/rocksdb_parent_child.rs"