[workspace]
members = ["evm/processor", "evm/sequencer-node"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Internal
evm-processor = { path = "evm/processor" }
evm-sequencer-node = { path = "evm/sequencer-node" }

# External
eyre = { version = "0.6" }
futures = { version = "0.3" }
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8" }
