[package]
name = "wire_encodings"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3" }
prost = "0.14.1"
rmp-serde = "1.1"
serde_cbor = "0.11"
parity-scale-codec = { version = "3.6", features = ["derive"] }
borsh = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


ethereum_ssz = "0.9.0"
ethereum_ssz_derive = "0.9.0"

hex = "0.4"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }


[[bench]]
name = "encodig_benchmarks"
path = "benches/benchmark.rs"
harness = false