[workspace]
resolver = "2"
members = [
    "cl",
    "ledger",
    "ledger_proof_statements",
    "ledger_validity_proof",
    "risc0_images",
]

# Always optimize; building and running the risc0_proofs takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
