[workspace]
resolver = "2"
members = [
    "cl",
    "ledger",
    "ledger_proof_statements",
    "ledger_risc0_proof",
    "bundle_risc0_proof",
    "risc0_proofs",
    "risc0_images",
]

# Always optimize; building and running the risc0_proofs takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[patch.crates-io]
# add RISC Zero accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
