[package]
name = "bundle_risc0_proof"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "3.0.3", default-features = false, features = ['std'] }
cl = { path = "../cl" }
risc0_images = { path = "../risc0_images" }
hex = "0.4"

[patch.crates-io]
# add RISC Zero accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
