[package]
name = "cl"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version="1.0", features = ["derive"]}
rand_core = "0.6.0"
hex = "0.4.3"
risc0-zkvm = "1.2"
itertools = "0.14"
bincode = { version = "2", features = ["serde"] }

[dev-dependencies]
rand = "0.8.5"
proptest = "1.2.0"
proptest-macro = "0.1"