[package]
name = "nomos_pol_prover"
version = "0.1.0"
edition = "2021"

[dependencies]
cl = { path = "../../../goas/cl/cl" }
proof_statements = { path = "../proof_statements" }
nomos_pol_risc0_proofs = { path = "../risc0_proofs" }
risc0-zkvm = { version = "1.0", features = ["prove", "metal"] }
risc0-groth16 = { version = "1.0" }
rand = "0.8.5"
rand_core = "0.6.0"
thiserror = "1.0.62"
curve25519-dalek = {version = "4.1", features = ["serde", "digest", "rand_core"]}
