[package]
name = "evm-processor"
edition = { workspace = true }

[dependencies]
reth-ethereum = { workspace = true }
executor-http-client = { git = "https://github.com/logos-co/nomos", branch = "master" }
reqwest = "0.11"
kzgrs-backend = { git = "https://github.com/logos-co/nomos", branch = "master" }
bincode = "1"
reth-tracing = { workspace = true }