[package]
name = "evm-sequencer-node"
edition = { workspace = true }

[dependencies]
evm-sequencer-mempool = { workspace = true }

clap = { workspace = true }
futures-util = { workspace = true }
jsonrpsee = { workspace = true }
reth = { workspace = true }
reth-cli-commands = { workspace = true }
reth-node-ethereum = { workspace = true }
